force-app/main/default/objects/Market_Input__c/Market_Input__c.object-meta.xml
<CustomObject>
    <description>Input received for a competitor.</description>
    <label>Market Input</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Market Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>