force-app/main/default/objects/Market_Input__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link market input to a competitor product where possible</inlineHelpText>
    <label>Competitor Product</label>
    <referenceTo>Competitor_Product__c</referenceTo>
    <relationshipLabel>Market Inputs</relationshipLabel>
    <relationshipName>Market_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>