force-app/main/default/objects/Market_Input__c/fields/Date_of_Info__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Info__c</fullName>
    <inlineHelpText>Date when information released.</inlineHelpText>
    <label>Date of Info</label>
    <type>Date</type>
</CustomField>