force-app/main/default/objects/Market_Input__c/fields/Link_to_Source__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Source__c</fullName>
    <inlineHelpText>When available, enter web link to source</inlineHelpText>
    <label>Link to Source</label>
    <type>Url</type>
</CustomField>