force-app/main/default/objects/Market_Input__c/fields/Source_of_Info__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Info__c</fullName>
    <inlineHelpText>Where does the market input come from?</inlineHelpText>
    <label>Source of Info</label>
    <length>60</length>
    <type>Text</type>
</CustomField>