force-app/main/default/objects/Market_Input__c/fields/Source_of_info_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_of_info_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When input comes from a customer, link the account.</inlineHelpText>
    <label>Source of info (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Inputs</relationshipLabel>
    <relationshipName>Market_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>