force-app/main/default/objects/Market_Input__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <inlineHelpText>Short title of the market input</inlineHelpText>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>