force-app/main/default/objects/Market_Input__c/fields/Type_of_Info__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Info__c</fullName>
    <label>Type of Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>